# src/config/swagger.yaml
@@ -286,11 +286,15 @@ paths:
         content:
           application/json:
             example:
+                photo: 'https://t4.ftcdn.net/jpg/03/46/93/61/360_F_346936114_RaxE6OQogebgAWTalE1myseY1Hbb5qPM.jpg'
                 name: testuser
                 email: testuser@gmail.com
             schema:
               type: object
               properties:
+                photo:
+                  type: string
+                  required: true
                 name:
                   type: string
                   required: true
