# src/controllers/auth-controller.ts
@@ -5,6 +5,7 @@ import jwt from 'jsonwebtoken'
 import { User } from 'models'
 import { signUpSchema, logInSchema, sendEmailSchema } from 'schemas'
 import { sendVerifyAccountEmail } from 'mail'
+import { getDefaultPhoto } from 'helpers'
 import { ErrorType, JwtPayloadType } from 'types'
 
 export const signUp = async (
@@ -38,6 +39,7 @@ export const signUp = async (
     const hashedPassword = await bcrypt.hash(req.body.password, 12)
 
     const user = new User({
+      photo: getDefaultPhoto(),
       username: req.body.username,
       email: req.body.email,
       password: hashedPassword,
@@ -133,6 +135,7 @@ export const logIn = async (
     res.status(200).json({
       token,
       id: loadedUser.id.toString(),
+      photo: loadedUser.photo,
       username: loadedUser.username,
       expiresIn,
     })
